[package]
name = "tenor"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
dotenv = "0.15.0"
serde_path_to_error = "0.1"
tokio = { version = "1", features = ["macros"] }

[dependencies]
codes-iso-639 = "0.1"
codes-iso-3166 = "0.1"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tracing = "0.1"
