[package]
name = "tenor"
description = "Rust api for Tenor.com"
version = "0.1.1"
edition = "2024"
categories = [ "api-bindings", "web-programming" ] 
license = "MIT"
keywords = [ "api", "google", "tenor" ]
repository = "https://github.com/Redhawk18/tenor"
rust-version = "1.85" # Because of 2024 edition

[dev-dependencies]
dotenv = "0.15.0"
serde_path_to_error = "0.1"
tokio = { version = "1", features = ["macros"] }

[dependencies]
# codes-iso-639 = { version = "0.1", features = ["serde"], git = "https://github.com/Redhawk18/rust-codes.git" }
# codes-iso-639 = { version = "0.1", features = ["serde"], path = "../rust-codes/codes-iso-639/" }
codes-iso-3166 = "0.1"
dotenv = "0.15"
iso_639 = { version = "0.1.0", git = "https://github.com/Redhawk18/iso_639.git", rev = "98bf1c6" }
reqwest = { version = "0.12", features = ["json"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tracing = "0.1"

